--- a/.github/workflows/build-rfc.yml
+++ b/.github/workflows/build-rfc.yml
@@ -14,6 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/cache@v4
+        with:
+          path: .refcache
+          key: webdav-push.mkd
 
       - name: Install packages
         run: sudo apt-get install --no-install-recommends -y ruby-kramdown-rfc2629 xml2rfc
@@ -22,12 +26,12 @@ jobs:
         run: mkdir build
 
       - name: Kramdown to XML
-        run: kramdown-rfc2629 webdav-push.mkd >build/webdav-push.xml
+        run: kramdown-rfc2629 webdav-push.mkd >build/draft-bitfire-webdav-push-00.xml
 
       - name: XML to HTML
-        run: (cd build; xml2rfc --html webdav-push.xml)
+        run: (cd build; xml2rfc --html draft-bitfire-webdav-push-00.xml)
       - name: XML to TXT
-        run: (cd build; xml2rfc --text webdav-push.xml)
+        run: (cd build; xml2rfc --text draft-bitfire-webdav-push-00.xml)
 
       - uses: actions/upload-pages-artifact@v3
         with:
