--- a/.github/workflows/build-rfc.yml
+++ b/.github/workflows/build-rfc.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
         with:
-          path:
-            - $HOME/.local/share/gem
-            - .refcache
+          path: |
+            $HOME/.local/share/gem
+            .refcache
           key: webdav-push.mkd
 
       - name: Install packages
